Project docuflow {
    database_type: 'PostgreSQL'
    Note: 'Description of the project: docuflow'
}

Enum versionType {
    MERGED
    DRAFT
}

Table project {
    id integer [pk, increment]
    name varchar
    description varchar
    created_at timestamp
    updated_at timestamp
    user_id integer [ref: <> user.id]
}

Table user {
    id integer [pk, increment]
    name varchar
    email varchar
    password varchar
    created_at timestamp
    updated_at timestamp
}

Table version {
    id integer [pk, increment]
    project_id integer [ref: > project.id]
    description varchar
    version_type versionType
    parent_id integer [ref: > version.id, null]
    merge_parent_id integer [ref: > version.id, null]
    created_at timestamp
    updated_at timestamp
}

Table container {
    id integer [pk, increment]
    version_id integer [ref: > version.id]
    name varchar
    parent_id integer [ref: > container.id, null]
}

Table snippet {
    snippet_id integer
    version_id integer [ref: <> version.id]
    container_id integer [ref: > container.id]
    content varchar
    created_at timestamp
    updated_at timestamp

    Indexes {
        (snippet_id, version_id) [pk]
    }
}

Table chat {
    id integer [pk, increment]
    project_id integer [ref: > project.id]
    author_id integer [ref: > user.id]
    content varchar
}